fix: adjust link ref

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1>Shortools</h1>
       <ul>
-        <li><a href="/pages/escape_regex.html">Escape Regex</a></li>
+        <li><a href="pages/escape_regex.html">Escape Regex</a></li>
       </ul>
     </div>
   </main>
