feat: add back button for title

--- a/pages/escape_regex.html
+++ b/pages/escape_regex.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <div class="container">
-        <h1>Shortools - Escape Regex</h1>
+        <h1><a href="./shortools" class="title__link">Shortools</a> - Escape Regex</h1>
         <hr />
         <div class="escape">
           <div class="escape__inputs">
