--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <main>
     <div class="container">
-      <h1>Shortools</h1>
+      <h1><a href="./shortools" class="title__link">Shortools</a> - Escape Regex</h1>
       <ul>
         <li><a href="pages/escape_regex.html">Escape Regex</a></li>
       </ul>
