refact: insert new architeture

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="container">
       <h1><a href="./shortools" class="title__link">Shortools</a> - Escape Regex</h1>
       <ul>
-        <li><a href="pages/escape_regex.html">Escape Regex</a></li>
+        <li><a href="escape_regex/escape_regex.html">Escape Regex</a></li>
+        <li><a href="get_params/get_params.html">Get Params</a></li>
       </ul>
     </div>
   </main>
